Ignore capped dup key error on initial sync SERVER-4474